# ALMO_EDA

./: CODE_REVIEW_IMPROVEMENTS.md  LICENSE  MIGRATION_GUIDE.md  README.md  main.py  pyproject.toml  requirements  requirements.txt
.github/workflows/: ci-cpu-tests.yml  eval-mof.yml  eval-tests.yml  python-publish.yml  python-tests.yml  smoke-test-training.yml  test-mof-validation.yml  train-tests.yml
almo_eda/: __init__.py  data_loader.py  logger.py  network.py  optimization.py  trainer.py  utils.py  visualization.py
configs/: base_config.yaml  eval_config.yaml  inference_config.yaml  mof_config.yaml  test_config.yaml  train_config.yaml
data/: almo_nn.ipynb  soap_descriptor.py
data/Bulk_water_ALMO_karhan/090000/: ._bulk.090000.c  ._bulk.090000.out  ._bulk.090000.x  ._coord.xyz  ._gamma_a  ._gamma_d  ._molecules.lowest.acceptor  ._molecules.lowest.acceptor.label  ._molecules.lowest.donor  ._molecules.lowest.donor.label  bulk.090000.out  bulk.090000.x  coord.cif  coord.vesta  coord.xyz  coord_soap_nmax8_lmax6_cut5.npy  gamma_a  gamma_d  (+4 more)
examples/: run_inference.py  run_mof.py  run_optuna.py  run_training.py  soap_descriptor.py  test_mof.py  test_training.py
models/: best_model_donor.pt  scaler.pkl
src/: __init__.py  data_loader.py  hyperparameter_optuna.py  loss.py  network.py  optimization.py  trainer.py  utils.py  visualization.py
test/: post_processing.py  post_processing_C2W2.py
tests/: eval_model.py  eval_mof.py  eval_test.py  eval_train.py  post_processing.py  run_train.py  test_dataset.py  test_inference.py  test_loss.py  test_mof.py  test_network.py  test_optuna.py  test_training.py  test_training_smoke.py
(+411 files in other folders)
