[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almo-eda"
version = "0.2.1"
description = "Machine learning models for ALMO-EDA energy prediction"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Hossein Tahmasbi" }
]
dependencies = [
  "torch>=2.0",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "scipy",
  "dscribe",
  "ase",
  "pyyaml",
  "optuna"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "mypy",
  "pre-commit"
]

[project.urls]
Homepage = "https://github.com/htahmasbi/ALMO_EDA"
Repository = "https://github.com/htahmasbi/ALMO_EDA"
Issues = "https://github.com/htahmasbi/ALMO_EDA/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["almo_eda*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
